# rust-rag-cli

./: .gitignore  Cargo.toml  FEATURES.md  README.md
src/: cli.rs  client.rs  main.rs  scrapper.rs
src/app/: action.rs  command.rs  mod.rs  state.rs
src/client/: mod.rs  rate_limiter.rs
src/clients/: mod.rs  ollama.rs
src/config/: mod.rs  settings.rs
src/db/: metadata.rs  mod.rs  store.rs
src/dev/: benchmark.rs  debug.rs  mod.rs
src/input/: handler.rs  mod.rs
src/secrets/: mod.rs  store.rs
src/service/: chat.rs  mod.rs
src/ui/: mod.rs  render.rs  syntax.rs
src/watcher/: handler.rs  mod.rs
