[package]
name = "rust-rag-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
arboard = "3"
tokio-stream = "0.1"
futures-util = "0.3"
