[package]
name = "rust-rag-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
arboard = "3"
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

toml = "0.8"
dirs = "5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.12"
notify = { version = "8.2", features = ["serde"] }
notify-debouncer-mini = "0.7"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = "0.6"
keyring = { version = "2", optional = true }
parking_lot = "0.12"
lazy_static = "1.4"

[features]
default = []
keyring-support = ["keyring"]